--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
-<h1>HOME</h1>
+<form action= "/new" method= "POST">
+
+    <input type="text" name="fullname" placeholder="Write your full name">
+    <input type="text" name="email" placeholder="Write your email">
+    <input type="text" name="phone" placeholder="Write your phone">
+
+    <button>
+        Save
+    </button>
+
+</form>
+
 </body>
 </html>
