--- a/templates/home.html
+++ b/templates/home.html
@@ -20,5 +20,17 @@
 
 </form>
 
+<div>
+    {% for contact in contacts %}
+        <h5>{{ contact.fullname }}</h5>
+            <a href="{{ url_for('contacts.update') }}"> Update</a>
+            <a href="{{ url_for('contacts.delete', id=contact.id) }}"> Delete</a>
+
+        <p>{{contact.email}}</p>
+        <p>{{contact.phone}}</p>
+    {% endfor %}
+
+</div>
+
 </body>
 </html>
