--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,7 @@
 <div>
     {% for contact in contacts %}
         <h5>{{ contact.fullname }}</h5>
-            <a href="{{ url_for('contacts.update') }}"> Update</a>
+            <a href="{{ url_for('contacts.update', id=contact.id) }}"> Update</a>
             <a href="{{ url_for('contacts.delete', id=contact.id) }}"> Delete</a>
 
         <p>{{contact.email}}</p>
