--- a/templates/update.html
+++ b/templates/update.html
@@ -1,23 +1,27 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block body %}
 <form action= "/update/{{contact.id}}" method= "POST">
+     <div class="mb-3">
+        <label for="fullname" class="text-white">Write your fullname </label>
+        <input type="text" name="fullname" placeholder="Write your full name" value="{{contact.fullname}}"
+               class="form-control rounded-0 bg-dark border-0 text-white">
+     </div>
 
-    <input type="text" name="fullname" placeholder="Write your full name" value="{{contact.fullname}}">
-    <input type="text" name="email" placeholder="Write your email" value="{{contact.email}}">
-    <input type="text" name="phone" placeholder="Write your phone" value="{{contact.phone}}">
+     <div class="mb-3">
+        <label for="fullname" class="text-white">Write your fullname</label>
+        <input type="text" name="email" placeholder="Write your email" value="{{contact.email}}"
+               class="form-control rounded-0 bg-dark border-0 text-white">
+     </div>
 
-    <button>
-        Save
-    </button>
+     <div class="mb-3">
+        <label for="fullname" class="text-white">Write your fullname </label>
+        <input type="text" name="phone" placeholder="Write your phone" value="{{contact.phone}}"
+               class="form-control rounded-0 bg-dark border-0 text-white">
+     </div>
+
+    <button class="btn btn-primary">Save</button>
 
 </form>
-</body>
-</html>
+
+{% endblock %}
