--- a/templates/update.html
+++ b/templates/update.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 <form action= "/update/{{contact.id}}" method= "POST">
+    <div class="col-md-4 offset-md-4">
      <div class="mb-3">
         <label for="fullname" class="text-white">Write your fullname </label>
         <input type="text" name="fullname" placeholder="Write your full name" value="{{contact.fullname}}"
@@ -20,8 +21,8 @@
                class="form-control rounded-0 bg-dark border-0 text-white">
      </div>
 
-    <button class="btn btn-primary">Save</button>
+    <button class="btn btn-primary">Update</button>
 
 </form>
-
+</div>
 {% endblock %}
